Updated index.html to correct hyperlink href

--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
     </style>
 </head>
 <body>
-    <p id="starting-text" class="container"><a href=".\menu\Cities Selection.html">Click here to open the menu :D</a></p>
+    <p id="starting-text" class="container"><a href=".\menu\CitySelection.html">Click here to open the menu :D</a></p>
 </body>
 </html>
