--- a/menu/Delhi/Delhi.html
+++ b/menu/Delhi/Delhi.html
@@ -24,11 +24,35 @@
             text-decoration: none;
             color: red;
         }
+
+        a:link {
+            color: white;
+            background-color: transparent;
+            text-decoration: none;
+        }
+
+        a:visited {
+            color: white;
+            background-color: transparent;
+            text-decoration: none;
+        }
+
+        a:hover {
+            color: #FFFFFF;
+            background-color: transparent;
+            text-decoration: underline;
+        }
+
+        a:active {
+            color: #FFFFFF;
+            background-color: transparent;
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
 
-    <h1 class="place">Travel to New Delhi!</h1>
+    <h1 class="place" id="start">Travel to New Delhi!</h1>
 
     <h2 style="color: rgb(255, 0, 0)">New Delhi is an amazing place!<br /> Places to visit are:</h2>
 
@@ -58,6 +82,9 @@
         <li>The Bangla Sahib is the main Gurudwara in New Delhi</li>
         <li>A gurudwara is a temple for the Sikh religion.
     </ul>
+
+    <p><a href="#start">Back to top</a></p>
+    <p><a href="https://stonycapybara.github.io/menu/CitySelection.html">Go back to selecting cities.</a></p>
 
 </body>
 </html>
