Added <script src="main.js"></script>

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             text-decoration: none;
         }
     </style>
+    <script src="main.js"></script>
 </head>
 <body>
     <p id="starting-text" class="container"><a href=".\menu\CitySelection.html">Click here to open the menu :D</a></p>
