Changed background image as previous one was not loading.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Welcome to my travel webpage!</title>
     <style>
         body {
-            background-image: url('https://youmatter.world/app/uploads/sites/2/2019/11/travel-world.jpg');
+            background-image: url('https://www.tataaig.com/s3/senior-citizens-travel-insurance_cd09659466.jpeg');
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-size: cover;
