Made links white

--- a/menu/CitySelection.html
+++ b/menu/CitySelection.html
@@ -17,6 +17,30 @@
             color: rgb(42 0 255);
             background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTCRqbbdH6pykNk6wW9rOnPdb6jHX_Of2FJFA&usqp=CAU');
         }
+        
+        a:link {
+            color: white;
+            background-color: transparent;
+            text-decoration: none;
+        }
+
+        a:visited {
+            color: white;
+            background-color: transparent;
+            text-decoration: none;
+        }
+
+        a:hover {
+            color: #FFFFFF;
+            background-color: transparent;
+            text-decoration: underline;
+        }
+
+        a:active {
+            color: #FFFFFF;
+            background-color: transparent;
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
