Made links white

--- a/index.html
+++ b/index.html
@@ -23,6 +23,30 @@
             color: white;
             text-decoration: none;
         }
+        
+        a:link {
+            color: white;
+            background-color: transparent;
+            text-decoration: none;
+        }
+
+        a:visited {
+            color: white;
+            background-color: transparent;
+            text-decoration: none;
+        }
+
+        a:hover {
+            color: #FFFFFF;
+            background-color: transparent;
+            text-decoration: underline;
+        }
+
+        a:active {
+            color: #FFFFFF;
+            background-color: transparent;
+            text-decoration: underline;
+        }
     </style>
     <script src="main.js"></script>
 </head>
