Changed hyperlink to correct path

--- a/menu/CitySelection.html
+++ b/menu/CitySelection.html
@@ -45,7 +45,7 @@
 </head>
 <body>
     <h1 class="starter">Please select the city that you want to see  :)</h1>
-    <a href=".\Delhi\Delhi.html">
+    <a href="./Delhi.html">
         <h2 id="citydelhi">Delhi</h2>
     </a>
 </body>
