Added line-height and height to #citydlehi

--- a/menu/CitySelection.html
+++ b/menu/CitySelection.html
@@ -15,6 +15,8 @@
             width: 200px;
             font-size: 2em;
             background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTCRqbbdH6pykNk6wW9rOnPdb6jHX_Of2FJFA&usqp=CAU');
+            line-height: 60px;
+            height: 60px;
         }
         
         a:link {
