Changed link to black as white was contrasting to background

--- a/index.html
+++ b/index.html
@@ -25,25 +25,25 @@
         }
         
         a:link {
-            color: white;
+            color: black;
             background-color: transparent;
             text-decoration: none;
         }
 
         a:visited {
-            color: white;
+            color: black;
             background-color: transparent;
             text-decoration: none;
         }
 
         a:hover {
-            color: #FFFFFF;
+            color: #000000;
             background-color: transparent;
             text-decoration: underline;
         }
 
         a:active {
-            color: #FFFFFF;
+            color: #000000;
             background-color: transparent;
             text-decoration: underline;
         }
