Made everything go to center

--- a/menu/CitySelection.html
+++ b/menu/CitySelection.html
@@ -9,6 +9,10 @@
             font-size: 1.5em;
             font-family: "Comic-Sans", sans-serif;
         }
+        
+        body {
+            text-align: center;
+        }
 
         #citydelhi {
             border: 2px dashed rgb(161, 161, 161);
@@ -17,28 +21,29 @@
             background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTCRqbbdH6pykNk6wW9rOnPdb6jHX_Of2FJFA&usqp=CAU');
             line-height: 60px;
             height: 60px;
+            align: center;
         }
         
         a:link {
-            color: white;
+            color: black;
             background-color: transparent;
             text-decoration: none;
         }
 
         a:visited {
-            color: white;
+            color: black;
             background-color: transparent;
             text-decoration: none;
         }
 
         a:hover {
-            color: #FFFFFF;
+            color: black;
             background-color: transparent;
             text-decoration: underline;
         }
 
         a:active {
-            color: #FFFFFF;
+            color: black;
             background-color: transparent;
             text-decoration: underline;
         }
