Changed #citydelhi align: center; to margin: auto;

--- a/menu/CitySelection.html
+++ b/menu/CitySelection.html
@@ -21,7 +21,7 @@
             background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTCRqbbdH6pykNk6wW9rOnPdb6jHX_Of2FJFA&usqp=CAU');
             line-height: 60px;
             height: 60px;
-            align: center;
+            margin: auto;
         }
         
         a:link {
