Changed CitySelection.html link

--- a/menu/Delhi.html
+++ b/menu/Delhi.html
@@ -84,7 +84,7 @@
     </ul>
 
     <p><a href="#start">Back to top</a></p>
-    <p><a href="./menu/CitySelection.html">Go back to selecting cities.</a></p>
+    <p><a href="https://stonycapybara.github.io/menu/CitySelection.html">Go back to selecting cities.</a></p>
 
 </body>
 </html>
