Updated hyperlink to Delhi

--- a/menu/CitySelection.html
+++ b/menu/CitySelection.html
@@ -51,7 +51,7 @@
 </head>
 <body>
     <h1 class="starter">Please select the city that you want to see  :)</h1>
-    <a href="./Delhi.html">
+    <a href="/menu/Delhi">
         <h2 id="citydelhi">Delhi</h2>
     </a>
 </body>
