--- a/menu/CitySelection.html
+++ b/menu/CitySelection.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Select your city</title>
+    <script src="/main.js"></script>
     <style>
         .starter {
             color: red;
