Images, Styling, Favicon
Starting page only need to do about me and code pages.

--- a/index.html
+++ b/index.html
@@ -9,9 +9,17 @@
 </head>
 <body>
     <h1 class="oof">Welcome To My Website</h1>
-    <div class="container-fluid">
-        <div class="aboutme"><h1 class="display">About Me</h1></div>
-        <div class="code"><h1 class="display">My Code</h1></div>
+    <div class="container">
+        <a href="/aboutMe/">
+            <div class="aboutme">
+                <h1 class="display vertical-center">About Me</h1>
+            </div>
+        </a>
+        <a href="/code/">
+            <div class="code">
+                <h1 class="display vertical-center">My Code</h1>
+            </div>
+        </a>
     </div>
 </body>
 </html>
