--- a/contact/index.html
+++ b/contact/index.html
@@ -18,28 +18,13 @@
             <nav>
                 <ul class="nav-links">
                     <li><a href="../projects">Projects</a></li>
-                    <li><a href="../aboutMe" style="color: var(--medium) !important;">About</a></li>
-                    <a href="../contact" class="cta"><button>Contact</button></a>
+                    <li><a href="../aboutMe">About</a></li>
+                    <a href="../contact" class="cta"><button style="background-color: var(--medium-translucent) !important;">Contact</button></a>
                 </ul>
             </nav>
         </header>
         <div class="container">
-            <h1>I'm Divjot</h1>
-            <h2>My age is 13</h2>
-            <h3>80% average in class 8 finals</h3>
-            <h4>(actually it was <abbr title="79.51388888888888888888888888888888888888888888888888888888888888888888888888888888888888888">79.5%</abbr> but rounded off, its 80)</h4>
-            <h5>Facts about me: </h5>
-            <ul>
-                <li>I listen to trap rap</li>
-                <li>I watch cars, engineering and meme videos on YouTube</li>
-                <li>My favourite subjects are: <ul><li>Math</li><li>Science</li><li>English</li><li>French</li></ul></li>
-                <li>Geography, History, SPL sucks</li>
-                <li>Hindi sucks even more</li>
-                <li>I am a fast learner nd can understand things better than other people</li>
-            </ul>
-            <p>Oh btw, I made this site from scratch. This is the first actually good thing I have made and I am pretty proud of it.</p>
-            <p>I applied for MINET, did the interview but my classmate got selected(he was fired? after some time)</p>
-
+            
         </div>
         <footer></footer>
         <script>
