--- a/projects/index.html
+++ b/projects/index.html
@@ -26,6 +26,7 @@
         <div class="container">
             <ul>
                 <li><a href="/projects/color">Colours</a></li>
+                <li><a href="/projects/nutriboom">Nutriboom</a></li>
             </ul>
         </div>
         <footer></footer>
