--- a/projects/nutriboom/index.html
+++ b/projects/nutriboom/index.html
@@ -52,7 +52,7 @@
               nisi ut aliquip ex ea commodo consequat.
             </span>
             <h1 class="product-release">
-              <a href="/epsilon/">
+              <a href="epsilon/">
                 Order now
                 <img src="right-md-svgrepo-com.svg" alt="right arrow" />
               </a>
