--- a/projects/nutriboom/epsilon/index.html
+++ b/projects/nutriboom/epsilon/index.html
@@ -12,7 +12,9 @@
     <div class="navbar">
       <div class="logotitle">
         <img src="../logo.svg" alt="logo" class="navlogo" />
-        <span class="alfa navtitle">Nutriboom</span>
+        <span class="alfa navtitle fancy-hover"
+          ><a href="../">Nutriboom</a></span
+        >
       </div>
       <ul class="navlinks alfa">
         <li><a href="#">About</a></li>
