--- a/projects/nutriboom/index.html
+++ b/projects/nutriboom/index.html
@@ -12,7 +12,7 @@
     <div class="navbar">
       <div class="logotitle">
         <img src="logo.svg" alt="logo" class="navlogo" />
-        <span class="alfa navtitle">Nutriboom</span>
+        <span class="alfa navtitle fancy-hover"><a href="#">Nutriboom</a></span>
       </div>
       <ul class="navlinks alfa">
         <li><a href="#">About</a></li>
@@ -52,13 +52,14 @@
               nisi ut aliquip ex ea commodo consequat.
             </span>
             <h1 class="product-release">
-              <a href="epsilon/">
+              <a href="/epsilon/" class="fancy-hover">
                 Order now
                 <img src="right-md-svgrepo-com.svg" alt="right arrow" />
               </a>
             </h1>
           </div>
         </div>
+        <div class="content c3"></div>
       </div>
     </div>
   </body>
