--- a/projects/nutriboom/index.html
+++ b/projects/nutriboom/index.html
@@ -59,7 +59,22 @@
             </h1>
           </div>
         </div>
-        <div class="content c3"></div>
+        <div class="content c3">
+          <h1>About us</h1>
+          <div class="product">
+            <span class="product-title">Founders</span>
+            <div class="images">
+              <img src="ceoM.svg" alt="david stoveleman" />
+              <img src="ceoF.svg" alt="debbie stovelman" />
+            </div>
+            <span class="product-description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat.
+            </span>
+          </div>
+        </div>
       </div>
     </div>
   </body>
