--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
         <script src="https://kit.fontawesome.com/e39c68d023.js" crossorigin="anonymous"></script>
     </head>
     <body>
-        <header>
+        <h1>Under renovation</h1>
+<!--         <header>
             <div class="not-links logo">
                 <a href="./" class="logo-img"><img src="./images/logo.svg" alt="logo"></a>
                 <span class="fa-solid fa-bars" id="bars">
                     <!-- <img width="150px" src="./images/hamburger-icon.png" alt="menu" height="24px"> -->
-                </span>
+<!--                 </span>
             </div>
             <nav>
                 <ul class="nav-links">
@@ -65,6 +66,6 @@
                 document.querySelector("header").classList.toggle("active")
                 document.querySelector("nav").classList.toggle("active")
             })
-        </script>
+        </script> -->
     </body>
 </html>
