--- a/projects/index.html
+++ b/projects/index.html
@@ -10,7 +10,8 @@
         <!-- <script src="https://kit.fontawesome.com/e39c68d023.js" crossorigin="anonymous"></script> -->
     </head>
     <body>
-        <header>
+        <h1>Under renovation</h1>
+<!--         <header>
             <div class="not-links logo">
                 <a href="../" class="logo-img"><img src="../images/logo.svg" alt="logo"></a>
                 <span class="fa-solid fa-bars" id="bars"><img src="../images/hamburger-icon.png" alt="menu" height="24px"></span>
@@ -37,6 +38,6 @@
                 document.querySelector("header").classList.toggle("active")
                 document.querySelector("nav").classList.toggle("active")
             })
-        </script>
+        </script> -->
     </body>
 </html>
